--- a/Lecturer/Lecturer.csproj
+++ b/Lecturer/Lecturer.csproj
@@ -50,6 +50,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmAddLecturerToModule.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAddLecturerToModule.Designer.cs">
+      <DependentUpon>frmAddLecturerToModule.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmAddStudentToModule.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAddStudentToModule.Designer.cs">
+      <DependentUpon>frmAddStudentToModule.cs</DependentUpon>
+    </Compile>
     <Compile Include="Connection.cs" />
     <Compile Include="frmAddLecturer.cs">
       <SubType>Form</SubType>
@@ -96,6 +108,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
+    <EmbeddedResource Include="frmAddLecturerToModule.resx">
+      <DependentUpon>frmAddLecturerToModule.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmAddStudentToModule.resx">
+      <DependentUpon>frmAddStudentToModule.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmAddLecturer.resx">
       <DependentUpon>frmAddLecturer.cs</DependentUpon>
     </EmbeddedResource>
